change for fm, java7